--- a/kaggle_shreyansh_lab5.ipynb
+++ b/kaggle_shreyansh_lab5.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "## Reading the image plaksha_Faculty.jpg\n",
-    "img = cv2.imread(\"/kaggle/input/images/Plaksha_Faculty.jpg\")\n",
+    "img = cv2.imread(\"Plaksha_Faculty.jpg\")\n",
     "\n",
     "  \n",
     "## Convert the image to grayscale\n",
@@ -226,7 +226,7 @@
    "outputs": [],
    "source": [
     "## Read the class of the template image 'Dr_Shashi_Tharoor.jpg' using cv2 and store it in template_img\n",
-    "template_img = cv2.imread(\"/kaggle/input/images/Dr_Shashi_Tharoor.jpg\")\n",
+    "template_img = cv2.imread(\"Dr_Shashi_Tharoor.jpg\")\n",
     "# Detect face  in the template image after converting it to gray and store it in template_faces\n",
     "template_faces = face_cascade.detectMultiScale(cv2.cvtColor(template_img, cv2.COLOR_BGR2GRAY), 1.05, 4, minSize=(25,25), maxSize=(50,50))\n",
     "# Draw rectangles around the detected faces\n",
