--- a/kaggle_shreyansh_lab5.ipynb
+++ b/kaggle_shreyansh_lab5.ipynb
@@ -47,6 +47,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import wandb\n",
+    "wandb.login(key=\"81b613d4a5cf50e31501ea889cf0176d3b4bbfd5\")\n",
+    "wandb.init(project='distance_classification_project')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Reading the image plaksha_Faculty.jpg\n",
     "img = cv2.imread(\"Plaksha_Faculty.jpg\")\n",
     "\n",
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -150,12 +161,12 @@
     "plt.grid(True)\n",
     "## show the plot\n",
     "plt.show()\n",
-    "\n"
+    "wandb.log({\"Output Image\": wandb.Image(plt)})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +227,7 @@
     "plt.grid(True)\n",
     "## Show the plot\n",
     "plt.show()\n",
-    "\n"
+    "wandb.log({\"Output Image\": wandb.Image(plt)})\n"
    ]
   },
   {
@@ -239,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -294,13 +305,13 @@
     "plt.grid(True)\n",
     "## show plot\n",
     "plt.show()\n",
-    "\n",
+    "wandb.log({\"Output Image\": wandb.Image(plt)})\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -357,6 +368,7 @@
     "plt.grid(True)\n",
     "## show the plot\n",
     "plt.show()\n",
+    "wandb.log({\"Output Image\": wandb.Image(plt)})\n",
     "                                            ## End of the lab 5 ##"
    ]
   },
@@ -413,7 +425,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -427,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
