--- a/kaggle_shreyansh_lab5.ipynb
+++ b/kaggle_shreyansh_lab5.ipynb
@@ -26,7 +26,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m## import cv2\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m## import numpy\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m## import matplotlib pyplot\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m## import KMeans cluster from sklearn\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m## import distance from scipy.spatial\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moffsetbox\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OffsetImage, AnnotationBbox\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "## import cv2\n",
     "## import numpy\n",
@@ -161,7 +173,7 @@
     "plt.grid(True)\n",
     "## show the plot\n",
     "plt.show()\n",
-    "wandb.log({\"Output Image\": wandb.Image(plt)})\n"
+    "wandb.log({\"Output Image\": wandb.Image(fig)})\n"
    ]
   },
   {
@@ -227,7 +239,7 @@
     "plt.grid(True)\n",
     "## Show the plot\n",
     "plt.show()\n",
-    "wandb.log({\"Output Image\": wandb.Image(plt)})\n"
+    "wandb.log({\"Output Image\": wandb.Image(fig)})\n"
    ]
   },
   {
@@ -305,7 +317,7 @@
     "plt.grid(True)\n",
     "## show plot\n",
     "plt.show()\n",
-    "wandb.log({\"Output Image\": wandb.Image(plt)})\n",
+    "wandb.log({\"Output Image\": wandb.Image(fig)})\n",
     "\n"
    ]
   },
@@ -368,7 +380,7 @@
     "plt.grid(True)\n",
     "## show the plot\n",
     "plt.show()\n",
-    "wandb.log({\"Output Image\": wandb.Image(plt)})\n",
+    "wandb.log({\"Output Image\": wandb.Image(fig)})\n",
     "                                            ## End of the lab 5 ##"
    ]
   },
